// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Flyout Menu Controlled example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="bx--tooltip__label flyout-trigger"
        id="test-trigger-id"
      >
        <div
          aria-describedby={null}
          className="bx--tooltip__trigger"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="button"
          tabIndex={0}
        >
          <svg
            aria-hidden={true}
            description={null}
            focusable="false"
            height={16}
            name="SettingsAdjust32"
            preserveAspectRatio="xMidYMid meet"
            role={null}
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30 8h-4.1c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2v2h14.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30V8zM21 12c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3S22.7 12 21 12zM2 24h4.1c.5 2.3 2.5 4 4.9 4s4.4-1.7 4.9-4H30v-2H15.9c-.5-2.3-2.5-4-4.9-4s-4.4 1.7-4.9 4H2V24zM11 20c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3S9.3 20 11 20z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Flyout Menu basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "alignContent": "center",
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <button
        className="iot--btn bx--btn bx--btn--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "margin": "10px 5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        Hide
      </button>
      <button
        className="story-flyout-menu-open iot--btn bx--btn bx--btn--primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "margin": "10px 5px",
          }
        }
        tabIndex={0}
        type="button"
      >
        Show
      </button>
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "center",
        }
      }
    >
      <div
        aria-describedby={null}
        aria-expanded={false}
        className="bx--tooltip__label flyout-trigger"
        id="test-trigger-id"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        role="button"
        tabIndex={0}
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
